# BambooMC

./: .gitignore  BambooMC.cc  CMakeLists.txt  GenerateVersionHeader.cmake  README.md
config/: confine_example.yaml  example-optical.yaml  example.json  example.xml  example.yaml  loader.yaml
detectors/example_detector/: MetalSphere.cc  MetalSphere.hh  PtfeBlock.cc  PtfeBlock.hh  SimpleVacuumBox.cc  SimpleVacuumBox.hh  SimpleXenonBox.cc  SimpleXenonBox.hh  sources.cmake
include/: BambooAnalysis.hh  BambooControl.hh  BambooDetector.hh  BambooDetectorConstruction.hh  BambooFactory.hh  BambooGenerator.hh  BambooGlobalVariables.hh  BambooMaterial.hh  BambooPhysics.hh  BambooUtils.hh  GdmlLoader.hh  HEPEvtLoader.hh  PandaXAnalysis.hh  PandaXDataManager.hh  PandaXEnergyDepositionHit.hh  PandaXEventAction.hh  PandaXOpticalPhysics.hh  PandaXPhysics.hh  PandaXRunAction.hh  PandaXSensitiveDetector.hh  PandaXStackingAction.hh  PandaXSteppingAction.hh  PandaXSurfaceFluxHit.hh  PandaXTrackInformation.hh  PandaXTrackingAction.hh  SimpleGPSGenerator.hh  simple_factory.hh  version.hh.in
include/analysis/: BambooAnalysis.hh  BambooAnalysisFactory.hh  PandaXAnalysis.hh  PandaXDataManager.hh  PandaXEnergyDepositionHit.hh  PandaXEventAction.hh  PandaXFlatSurfaceFluxHit.hh  PandaXRunAction.hh  PandaXSensitiveDetector.hh  PandaXStackingAction.hh  PandaXSteppingAction.hh  PandaXTrackingAction.hh
include/detector/: BambooDetectorFactory.hh  BambooDetectorPart.hh  BambooMaterial.hh  BambooMaterialFactory.hh  CopperVessel.hh  SampleBoxDetector.hh  SampleCylinderDetector.hh  SampleMaterial.hh  SamplePolyHedra.hh  SampleWorldBox.hh  SimpleLabWall.hh  WaterShield.hh
include/generator/: BambooGenerator.hh  BambooGeneratorFactory.hh  SimpleGPSGenerator.hh
include/physics/: BambooPhysics.hh  BambooPhysicsFactory.hh  SimpleUnderGroundPhysics.hh
macro/: confine_example.mac  electron.mac  example_cylinder.mac  gps_water_flux.mac  test_block.mac  visu.mac
scripts/: add_detector.pl  add_material.pl  add_mc_class.pl
src/: BambooControl.cc  BambooDetectorConstruction.cc  BambooGlobalVariables.cc  BambooUtils.cc  GdmlLoader.cc  HEPEvtLoader.cc  PandaXAnalysis.cc  PandaXDataManager.cc  PandaXEnergyDepositionHit.cc  PandaXEventAction.cc  PandaXOpticalPhysics.cc  PandaXPhysics.cc  PandaXRunAction.cc  PandaXSensitiveDetector.cc  PandaXStackingAction.cc  PandaXSteppingAction.cc  PandaXSurfaceFluxHit.cc  PandaXTrackingAction.cc  SimpleGPSGenerator.cc
src/analysis/: BambooAnalysis.cc  PandaXAnalysis.cc  PandaXDataManager.cc  PandaXEnergyDepositionHit.cc  PandaXEventAction.cc  PandaXFlatSurfaceFluxHit.cc  PandaXRunAction.cc  PandaXSensitiveDetector.cc  PandaXStackingAction.cc  PandaXSteppingAction.cc  PandaXTrackingAction.cc
src/detector/: BambooDetectorPart.cc  BambooMaterial.cc  CopperVessel.cc  SampleBoxDetector.cc  SampleCylinderDetector.cc  SampleMaterial.cc  SamplePolyHedra.cc  SampleWorldBox.cc  SimpleLabWall.cc  WaterShield.cc
src/generator/: BambooGenerator.cc  SimpleGPSGenerator.cc
src/physics/: BambooPhysics.cc  SimpleUnderGroundPhysics.cc
test/: test_control.cc  test_detector_parameters.cc
user/detectors/example/: SampleCylinder.cc  SampleCylinder.hh  SampleMaterial.cc  SampleMaterial.hh  SampleSteelContainer.cc  SampleSteelContainer.hh  SampleWater.cc  SampleWater.hh  SampleWorld.cc  SampleWorld.hh  sources.cmake
user/detectors/example2/: ExampleMaterial.cc  ExampleMaterial.hh  sources.cmake
user/detectors/optical_example/: CylinderOp.cc  CylinderOp.hh  sources.cmake
user/mc/pandax/: ConfineGenerator.cc  ConfineGenerator.hh  ConfineGeneratorMessenger.cc  ConfineGeneratorMessenger.hh  EventLoader.cc  EventLoader.hh  EventLoaderMessenger.cc  EventLoaderMessenger.hh  PandaXOpticalAnalysis.cc  PandaXOpticalAnalysis.hh  PandaXOpticalDataManager.cc  PandaXOpticalDataManager.hh  PandaXOpticalEventAction.cc  PandaXOpticalEventAction.hh  PandaXOpticalHit.cc  PandaXOpticalHit.hh  PandaXOpticalRunAction.cc  PandaXOpticalRunAction.hh  PandaXOpticalSD.cc  PandaXOpticalSD.hh  PandaXOpticalSteppingAction.cc  PandaXOpticalSteppingAction.hh  PandaXOpticalTrackInformation.hh  PandaXOpticalTrackingAction.cc  PandaXOpticalTrackingAction.hh  sources.cmake
xml/: quick_water_flux.xml  test_block.xml  test_poly.xml
